--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babylonjs": "^4.2.0",
+    "babylonjs-gui": "^4.2.0",
     "core-js": "^3.6.5",
+    "gsap": "^3.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
   },
