--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/resize-observer-browser": "^0.1.6",
     "babylonjs": "^4.2.0",
     "babylonjs-gui": "^4.2.0",
     "core-js": "^3.6.5",
