added face and hands

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "babylonjs": "^4.2.0",
     "babylonjs-gui": "^4.2.0",
     "core-js": "^3.6.5",
+    "earcut": "^2.2.3",
     "gsap": "^3.7.1",
+    "install": "^0.13.0", 
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
+    "@types/earcut": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
