--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": ["webpack-env", "resize-observer-browser"],
+    "types": ["webpack-env", "resize-observer-browser", "earcut"],
     "paths": {
       "@/*": ["src/*"]
     },
